--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,14 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Gustavo Gomez desarrollador de software">
+    <meta name="description" content="Software Developer">
     <meta
       name="Gustavo Portfolio"
-      content="Personal web page"
+      content="Personal Web Page"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-
-<!--    <link rel="manifest" href="/%PUBLIC_URL%/manifest.json" />-->
-    <title>Gustavo Gomez</title>
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
+    <link rel="manifest" href="/%PUBLIC_URL%/manifest.json" />
+    <title>Gustavo Gomez | Software Developer</title>
   </head>
   <body>
     <div id="root"></div>
