add 18n library to use languages

--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,14 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Software Developer">
+    <meta name="description" content="Software Engineer">
     <meta
       name="Gustavo Portfolio"
       content="Personal Web Page"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
     <link rel="manifest" href="/%PUBLIC_URL%/manifest.json" />
-    <title>Gustavo Gomez | Software Developer</title>
+    <title>Gustavo Gomez | Software Engineer</title>
   </head>
   <body>
     <div id="root"></div>
